--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,12 @@ body, input {
   padding: 0;
   margin: 0;
   font-family: 'DM Mono', monospace;
-  background: #333;
+  background: hsl(0deg, 0%, 40%);
+  color: white;
 }
 
 #app {
-  font-size: 5em;
+  font-size: 1em;
   width: 100vw;
   height: 100vh;
   margin: auto;
