--- a/src/index.html
+++ b/src/index.html
@@ -10,24 +10,22 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300&Fredoka:wght@300&family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&Fredoka:wght@300&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
     <style>
 body, input {
   padding: 0;
   margin: 0;
-  font-family: 'DM Mono', monospace;
+  font-family: 'Montserrat', sans-serif;
   background: hsl(0deg, 0%, 40%);
   color: white;
 }
 
 #app {
   font-size: 1em;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   margin: auto;
-  display: flex;
-  justify-content: center;
   position: relative;
 }
     </style>
