--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@ body, input {
     <script>
 
       document.addEventListener("DOMContentLoaded", () => {
-              let api = VStaff(document.getElementById('app'), {})
+              let api = Lado(document.getElementById('app'), {})
       })
     </script>
   </body>
