rollback lazy loading

--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,7 @@ body, input {
   </head>
   <body>
     <div id='app' class='is2d'></div>
-    <script type="module">
-
-      import Lado from './main.js'
+    <script>
       document.addEventListener("DOMContentLoaded", () => {
               let api = Lado(document.getElementById('app'), {})
       })
